recognition_demo.html:  The onEndEventHandler function will now log the event.  This is to help find out what's happening when the recognition stops without an error.  For example, if someone speaks, then stops, the recognition may stop, but the error event handler may not be triggered.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -634,6 +634,8 @@
         console.log("Recognition ended.");
         console.log("Stop Requested: "+test.stopRequested());
 
+        console.log(event);
+
         var elementToHideID = "button_sttStop";
         var elementToShowID = "button_sttStart";
 
