recognition_demo.html:  Added textareas for transcripts to be displayed.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -33,6 +33,14 @@
 
         <button id='button_sttStart' onclick="recognitionStartClickEventHandler();">Start Recognition</button>
         <button id='button_sttStop' onclick="recognitionStopClickEventHandler();" style="display:none;">Stop Recognition</button>
+
+        <br/>
+        <label>Interim Transcript:</label><br/>
+        <textarea id='textarea_interimTranscript' readonly='true' />
+
+        <br/>
+        <label>Final Transcript:</label><br/>
+        <textarea id='textarea_finalTranscript' readonly='true' />
     </div>
     <br />
     <br />
