recognition_demo.html:  UI stopped updating.  Attempting to correct.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -36,11 +36,11 @@
 
         <br/>
         <label>Interim Transcript:</label><br/>
-        <textarea id='textarea_interimTranscript' readonly='true' />
+        <textarea id='textarea_interimTranscript' readonly='true'></textarea>
 
         <br/>
         <label>Final Transcript:</label><br/>
-        <textarea id='textarea_finalTranscript' readonly='true' />
+        <textarea id='textarea_finalTranscript' readonly='true'></textarea>
     </div>
     <br />
     <br />
