recognition_demo.html: Testing conversion to library class definition.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -635,7 +635,7 @@
     var interimTranscript = "";
     var finalTranscript   = "";
     var IGNORE_SPOKEN_PUNCTUATION_COMMANDS = true;
-    var test = new ContinuousSession();
+    var test = new SpeechAPI.SpeechRecognition.ContinuousSession();
 
 
     test.setEventHandler_onend(function onEndEventHandler(event){
