recognition_demo.html: Cleaning up UI.

--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -35,12 +35,12 @@
             <button id='button_sttStop' onclick="recognitionStopClickEventHandler();" style="display:none;">Stop Recognition</button>
         </p>
         <p>
-            <label>Interim Transcript:
+            <label>Interim Transcript:<br/>
             <textarea id='textarea_interimTranscript' rows='2' cols='50' readonly></textarea>
             </label>
         </p>
         <p>
-            <label>Final Transcript:
+            <label>Final Transcript:<br/>
             <textarea id='textarea_finalTranscript' rows='5' cols='50' readonly></textarea>
             </label>
         </p>
