--- a/recognition_demo.html
+++ b/recognition_demo.html
@@ -30,7 +30,9 @@
         <p>Your browser does not appear to support the Speech Recognition API.  Please see  <a href="http://caniuse.com/#feat=speech-recognition" target="_blank">caniuse.com</a> for a list of capable browsers.</p>
     </div>
     <div id="div_sttInputs" style="display:none;">
+
         <p>
+            <label>Recording Status:&nbsp;</label><label id="label_recordingStatus">Stopped</label><br/>
             <button id='button_sttStart' onclick="recognitionStartClickEventHandler();">Start Recognition</button>
             <button id='button_sttStop' onclick="recognitionStopClickEventHandler();" style="display:none;">Stop Recognition</button>
         </p>
@@ -63,104 +65,189 @@
 </footer>
 <script src='SpeechAPILibrary.js'></script>
 <script>
-    var elementToHideID = "div_NoJavaScriptWarning";
-    var elementToShowID = null;
-    document.getElementById(elementToHideID).style.display="none";
+    var ELEMENT_TO_HIDE_ID = "div_NoJavaScriptWarning";
+    var ELEMENT_TO_SHOW_ID = null;
+    document.getElementById(ELEMENT_TO_HIDE_ID).style.display="none";
 
     //Here we detect if speech synthesis is supported by the client browser:
     if(SpeechAPI.SpeechRecognition.isSupported())
     {
         //If it's supported, we need to update our UI:
         console.log("STT Supported!");
-        elementToShowID = "div_sttInputs";
+        ELEMENT_TO_SHOW_ID = "div_sttInputs";
     }
     else
     {
         //If it's not supported, let the end user know:
         console.log("STT Not Supported!");
-        elementToShowID = "div_STTNotSupportedWarning";
+        ELEMENT_TO_SHOW_ID = "div_STTNotSupportedWarning";
     }
-    document.getElementById(elementToShowID).style.display="block";
+    document.getElementById(ELEMENT_TO_SHOW_ID).style.display="block";
 
 </script>
 <script>
 
-    //TODO: Continue session when ended without request or error.
-    //TODO: Appropriately hide/show buttons in onstart and onend event handlers.
-    //TODO: Reset final transcript when user starts a new session.
-
     var interimTranscript = "";
     var finalTranscript   = "";
     var IGNORE_SPOKEN_PUNCTUATION_COMMANDS = true;
-    var test = new SpeechAPI.SpeechRecognition.ContinuousSession();
+    var recognitionSession = new SpeechAPI.SpeechRecognition.ContinuousSession();
+
+    var STOP_BUTTON_ID                 = "button_sttStop";
+    var START_BUTTON_ID                = "button_sttStart";
+    var STATUS_LABEL_ID                = "label_recordingStatus";
+    var INTERIM_TRANSCRIPT_TEXTAREA_ID = "textarea_interimTranscript";
+    var FINAL_TRANSCRIPT_TEXTAREA_ID   = "textarea_finalTranscript";
+
+    function setInterimTranscriptTextAreaValue(desiredText)
+    {
+        document.getElementById(INTERIM_TRANSCRIPT_TEXTAREA_ID).value = desiredText;
+    }
+
+    function setFinalTranscriptTextAreaValue(desiredText)
+    {
+        document.getElementById(FINAL_TRANSCRIPT_TEXTAREA_ID).value = desiredText;
+    }
+
+    function setStatusLabelValue(desiredInnerHTML)
+    {
+        document.getElementById(STATUS_LABEL_ID).innerHTML = desiredInnerHTML;
+    }
+
+    function disableStopButton()
+    {
+        document.getElementById(STOP_BUTTON_ID).disabled = true;
+    }
+
+    function enableStopButton()
+    {
+        document.getElementById(STOP_BUTTON_ID).disabled = false;
+    }
+
+    function disableStartButton()
+    {
+        document.getElementById(START_BUTTON_ID).disabled = true;
+    }
+
+    function enableStartButton()
+    {
+        document.getElementById(START_BUTTON_ID).disabled = false;
+    }
+
+    function hideStopButton()
+    {
+        document.getElementById(STOP_BUTTON_ID).style.display="none";
+    }
+
+    function showStopButton()
+    {
+        document.getElementById(STOP_BUTTON_ID).style.display="block";
+    }
+
+    function hideStartButton()
+    {
+        document.getElementById(START_BUTTON_ID).style.display="none";
+    }
+
+    function showStartButton()
+    {
+        document.getElementById(START_BUTTON_ID).style.display="block";
+    }
 
 
-    test.setEventHandler_onend(function onEndEventHandler(event){
-        var FUNCTION_NAME = "onEndEventHandler()";
+    recognitionSession.setEventHandler_onend(function onEndEventHandler(event){
+        var FUNCTION_NAME      = "onEndEventHandler()";
 
-        console.log("Recognition ended.");
-        console.log("Stop Requested: "+test.stopRequested());
+        var logMessage = FUNCTION_NAME + ": Recognition ended.";
+        console.log(logMessage);
+
+        logMessage = FUNCTION_NAME + ": Stop Requested: "+recognitionSession.stopRequested();
+        console.log(logMessage);
 
         console.log(event);
 
-        var elementToHideID = "button_sttStop";
-        var elementToShowID = "button_sttStart";
+        hideStopButton();
+        showStartButton();
+        enableStopButton();
 
-        document.getElementById(elementToHideID).style.display="none";
-        document.getElementById(elementToShowID).style.display="block";
-
-        //TODO: Update UI to indicate the session has stopped.
+        //Update UI to indicate the session has stopped:
+        setStatusLabelValue("Stopped");
     });
 
-    test.setEventHandler_onstart(function onStartEventHandler(event){
-        var FUNCTION_NAME = "onStartEventHandler()";
+    recognitionSession.setEventHandler_onstart(function onStartEventHandler(event){
+        var FUNCTION_NAME                  = "onStartEventHandler()";
 
-        console.log("Recognition started.");
-        console.log("Start Requested: "+test.startRequested());
+        var logMessage = FUNCTION_NAME + ": Recognition started.";
+        console.log(logMessage);
 
-        //TODO: Update UI to indicate the session is in progress.
+        logMessage = FUNCTION_NAME + ": Start Requested: "+recognitionSession.startRequested();
+        console.log(logMessage);
+
+        //Make sure that the stop button is visible and the start button is hidden:
+        hideStartButton();
+        showStopButton();
+        enableStopButton();
+
+        //Update UI to indicate the session is in progress:
+        setStatusLabelValue("In progress...");
+
+        //Refresh text areas:
+        setInterimTranscriptTextAreaValue(recognitionSession.getInterimTranscript());
+        setFinalTranscriptTextAreaValue(recognitionSession.getFinalTranscript());
     });
 
-    test.setEventHandler_onerror(function onErrorEventHandler(event){
+    recognitionSession.setEventHandler_onerror(function onErrorEventHandler(event){
         var FUNCTION_NAME = "onErrorEventHandler()";
 
-        if(test.errorEncountered())
+        if(recognitionSession.errorEncountered())
         {
             var messageToShow = null;
+            var showAlert = true;
 
             try
             {
-                var errorMessage = test.getEncounteredError().error;
+                var errorMessage = recognitionSession.getEncounteredError().error;
                 console.log(SpeechAPI.SpeechRecognition.Errors.NETWORK());
 
                 switch(errorMessage)
                 {
                     case SpeechAPI.SpeechRecognition.Errors.NO_SPEECH():
-                        messageToShow = "  An error has occured.  No speech was detected.  Please try again.";
+                        /*
+                        * WARNING:  Showing alerts for errors that will trigger auto-restarts may cause stop requests to take longer to complete.
+                        */
+                        showAlert = false;
+                        messageToShow = "No speech was detected.  Please try again.";
                         break;
                     case SpeechAPI.SpeechRecognition.Errors.NETWORK():
-                        messageToShow = "  An error has occured.  There appears to be a network issue.  Please check your internet connection.";
+                        showAlert = true;
+                        messageToShow = "ERROR! There appears to be a network issue.  Please check your internet connection.";
                         break;
                     case SpeechAPI.SpeechRecognition.Errors.ABORTED():
-                        messageToShow = "  An error has occured.  The session was unexpectedly aborted.  Please try again.";
+                        showAlert = true;
+                        messageToShow = "ERROR! The session was unexpectedly aborted.  Please try again.";
                         break;
                     case SpeechAPI.SpeechRecognition.Errors.AUDIO_CAPTURE():
-                        messageToShow = "  There was an error capturing audio.  Please check your microphone's connection and volume level.";
+                        showAlert = true;
+                        messageToShow = "There was an error capturing audio.  Please check your microphone's connection and volume level.";
                         break;
                     case SpeechAPI.SpeechRecognition.Errors.NOT_ALLOWED():
-                        messageToShow = "  Microphone was access denied.  Please allow access to your microphone.";
+                        showAlert = true;
+                        messageToShow = "Microphone was access denied.  Please allow access to your microphone.";
                         break;
                     case SpeechAPI.SpeechRecognition.Errors.SERVICE_NOT_ALLOWED():
-                        messageToShow = "  Microphone was access denied.  Please allow access to your microphone.";
+                        showAlert = true;
+                        messageToShow = "Microphone was access denied.  Please allow access to your microphone.";
                         break;
                     case SpeechAPI.SpeechRecognition.Errors.BAD_GRAMMAR():
-                        messageToShow = "  Internal grammar error.  Please contact the site administrators.";
+                        showAlert = true;
+                        messageToShow =  "Internal grammar error.  Please contact the site administrators.";
                         break;
                     case SpeechAPI.SpeechRecognition.Errors.LANGUAGE_NOT_SUPPORTED():
-                        messageToShow = "  Unsupported language error.  Please contact the site administrators.";
+                        showAlert = true;
+                        messageToShow = "Unsupported language error.  Please contact the site administrators.";
                         break;
                     default:
-                        messageToShow = "  An unrecognized error has occurred.  The error message was: '"+test.getEncounteredError().error+"'";
+                        showAlert = true;
+                        messageToShow = "An unrecognized error has occurred.  The error message was: '"+recognitionSession.getEncounteredError().error+"'";
                         break;
                 }
             }
@@ -171,57 +258,62 @@
                 console.log(logMessage);
                 console.log(caughtException);
             }
-            alert(messageToShow);
+            if(showAlert)
+            {
+                alert(messageToShow);
+            }
         }
     });
 
-    test.setEventHandler_onresult(function onResultEventHandler(event){
+    recognitionSession.setEventHandler_onresult(function onResultEventHandler(event){
         var FUNCTION_NAME = "onResultEventHandler()";
 
         console.log(event);
 
-        var INTERIM_TRANSCRIPT_TEXTAREA_ID = "textarea_interimTranscript";
-        var FINAL_TRANSCRIPT_TEXTAREA_ID   = "textarea_finalTranscript";
+        var logMessage = FUNCTION_NAME + ": Interim: "+recognitionSession.getInterimTranscript();
+        console.log(logMessage);
 
-        console.log("Interim: "+test.getInterimTranscript());
-        console.log("Final:   "+test.getFinalTranscript());
+        logMessage = FUNCTION_NAME + ": Final:   "+recognitionSession.getFinalTranscript();
+        console.log(logMessage);
 
-        document.getElementById(INTERIM_TRANSCRIPT_TEXTAREA_ID).value = test.getInterimTranscript();
-        document.getElementById(FINAL_TRANSCRIPT_TEXTAREA_ID).value = test.getFinalTranscript();
+        setInterimTranscriptTextAreaValue(recognitionSession.getInterimTranscript());
+        setFinalTranscriptTextAreaValue(recognitionSession.getFinalTranscript());
     });
 
     function recognitionStartClickEventHandler()
     {
         var FUNCTION_NAME = "recognitionStartClickEventHandler()";
 
-        console.log("recognitionStartClickEventHandler(): Entering function.");
-        var elementToHideID = "button_sttStart";
-        var elementToShowID = "button_sttStop";
+        var logMessage = FUNCTION_NAME + ": Entering function.";
+        console.log(logMessage);
 
-        test.start();
+        var resetTranscriptsFromLastSession = true;
+        var includeConfidencesInTranscripts = true;
+        var ignoreSpokenPunctuationCommands = true;
 
-        document.getElementById(elementToHideID).style.display="none";
-        document.getElementById(elementToShowID).style.display="block";
+        recognitionSession.start(resetTranscriptsFromLastSession,includeConfidencesInTranscripts,ignoreSpokenPunctuationCommands);
 
-        console.log("recognitionStartClickEventHandler(): Leaving function.");
+        hideStartButton();
+        showStopButton();
+        enableStopButton();
+
+        logMessage = FUNCTION_NAME + ": Leaving function.";
+        console.log(logMessage);
     }
 
     function recognitionStopClickEventHandler()
     {
-        var FUNCTION_NAME = "recognitionStopClickEventHandler()";
+        var FUNCTION_NAME   = "recognitionStopClickEventHandler()";
 
-        console.log("recognitionStopClickEventHandler(): Entering function.");
+        var logMessage = FUNCTION_NAME + ": Entering function.";
+        console.log(logMessage);
 
-        var elementToHideID = "button_sttStop";
-        var elementToShowID = "button_sttStart";
+        recognitionSession.stop();
+        setStatusLabelValue("Stopping.  Please wait...");
+        disableStopButton();
 
-        document.getElementById(elementToHideID).style.display="none";
-
-        test.stop();
-
-        document.getElementById(elementToShowID).style.display="block";
-
-        console.log("recognitionStopClickEventHandler(): Leaving function.");
+        logMessage = FUNCTION_NAME + ": Leaving function.";
+        console.log(logMessage);
     }
 
 </script>
